--- a/multimedia_es.html
+++ b/multimedia_es.html
@@ -96,7 +96,7 @@
   <div class="row">
     <div class="col-md-4" style="text-align:center;padding-top:1em;">
     <img style="width:90%;" src="design/felipefest_poster1_red.png" alt="Poster of Complexity of numerical computation: A conference in honor of Felipe Cucker"/></a>
-    <p style="margin:0;text-align:center;"><b>Complexity of numerical computation<br>A conference in honor of Felipe Cucker</b><br>August de 2019
+    <p style="margin:0;text-align:center;"><b>Complexity of numerical computation<br/>A conference in honor of Felipe Cucker</b><br/>August de 2019
     </p><span style="margin:0;"><a style="float:left;" href="https://felipesfest.github.io">&ensp;Página web del evento&ensp;</a>
     <a style="float:right;" href="design/felipefest_poster1.png">&ensp;Cartel del evento&ensp;</a></span>
     <span><a style="float:left;" href="design/felipefest_poster2.png">&ensp;1ª versión rechazada&ensp;</a>
@@ -105,51 +105,51 @@
 
     <!--<div class="col-md-4" style="text-align:center;padding-top:1em;">
     <img style="width:90%;" src="design/felipefest_poster2.png" alt="Poster of Complexity of numerical computation: A conference in honor of Felipe Cucker"/></a>
-    <p style="margin:0;text-align:center;"><b>Complexity of numerical computation<br>A conference in honor of Felipe Cucker</b><br>August de 2019
+    <p style="margin:0;text-align:center;"><b>Complexity of numerical computation<br/>A conference in honor of Felipe Cucker</b><br/>August de 2019
     </p><span>
     <a style="float:right;" href="design/felipefest_poster2.png">&ensp;1st draft of poster of the event&ensp;</a></span>
     </div>
 
     <div class="col-md-4" style="text-align:center;padding-top:1em;">
     <img style="width:90%;" src="design/felipefest_poster3.png" alt="Poster of Complexity of numerical computation: A conference in honor of Felipe Cucker"/></a>
-    <p style="margin:0;text-align:center;"><b>Complexity of numerical computation<br>A  conference in honor of Felipe Cucker</b><br>August de 2019
+    <p style="margin:0;text-align:center;"><b>Complexity of numerical computation<br/>A  conference in honor of Felipe Cucker</b><br/>August de 2019
     </p><span>
     <a style="float:right;" href="design/felipefest_poster3.png">&ensp;2nd draft of poster of the event&ensp;</a></span>
     </div>-->
 
     <div class="col-md-4" style="text-align:center;padding-top:1em;">
     <img style="width:90%;" src="design/bmsstudconf6_poster_red.jpg" alt="Poster of 6th BMS Student Conference"/></a>
-    <p style="margin:0;text-align:center;padding-bottom:1.45em;"><b>6th BMS Student Conference</b><br>Febrero de 2018
+    <p style="margin:0;text-align:center;padding-bottom:1.45em;"><b>6th BMS Student Conference</b><br/>Febrero de 2018
     </p><span><a style="float:left;" href="https://bmsstudconf.github.io/2018/index.html">&ensp;Página web del evento&ensp;</a>
     <a style="float:right;" href="design/bmsstudconf6_poster.jpg">&ensp;Cartel del evento&ensp;</a></span>
     </div>
 
     <div class="col-md-4" style="text-align:center;padding-top:1em;">
     <img style="width:90%;" src="design/algnum_poster_red.jpg" alt="Poster of Complexity of numerical computation: A conference in honor of Felipe Cucker"/></a>
-    <p style="margin:0;text-align:center;"><b>Algebra meets Numerics<br>Condition and Complexity</b><br>November de 2017
+    <p style="margin:0;text-align:center;"><b>Algebra meets Numerics<br/>Condition and Complexity</b><br/>November de 2017
     </p><span><a style="float:left;" href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algorithmische_algebra/v_menue/veranstaltungen/2017ws/algebra_meets_numerics_condition_and_complexity/">&ensp;Página web del evento&ensp;</a>
     <a style="float:right;" href="design/algnum_poster.jpg">&ensp;Cartel del evento&ensp;</a></span>
     </div>
 
   </div>
 
-  <h3  style="padding-top:1em;">Portadas diseñadas para la revista $\pi kasle$</h3>
+  <h3 id="pikaslecovers" style="padding-top:1em;">Portadas diseñadas para la revista $\pi kasle$</h3>
   <div class="row" style="padding-top:1em;">
   <div class="col-md-4" style="text-align:center;">
   <a href="pikasle/PIkasle01.pdf"><img style="width:90%;" src="pikasle/portada01red.jpg" alt="Cover of Issue N. 1 of PIkasle"/></a>
-  <p style="margin:0;text-align:center;"><b>$\pi kasle$ Número 1<br>Octubre de 2011</b>
+  <p style="margin:0;text-align:center;"><b>$\pi kasle$ Número 1<br/>Octubre de 2011</b>
   </p><span><a style="float:left;" href="pikasle/PIkasle01.pdf">&ensp;PDF del número&ensp;</a>
   <a style="float:right;" href="pikasle/portada01.jpg">&ensp;Portada del número&ensp;</a></span>
   </div>
   <div class="col-md-4" style="text-align:center;">
   <a href="pikasle/PIkasle02.pdf"><img style="width:90%;" src="pikasle/portada02red.jpg" alt="Cover of Issue N. 2 of PIkasle"/></a>
-  <p style="margin:0;text-align:center;"><b>$\pi kasle$ Número 2<br>November-Diciembre de 2011</b>
+  <p style="margin:0;text-align:center;"><b>$\pi kasle$ Número 2<br/>November-Diciembre de 2011</b>
   </p><span><a style="float:left;" href="pikasle/PIkasle02.pdf">&ensp;PDF del número&ensp;</a>
   <a style="float:right;" href="pikasle/portada02.jpg">&ensp;Portada del número&ensp;</a></span>
   </div>
   <div class="col-md-4" style="text-align:center;">
   <a href="pikasle/PIkasle03.pdf"><img style="width:90%;" src="pikasle/portada03red.jpg" alt="Cover of Issue N. 3 of PIkasle"/></a>
-  <p style="margin:0;text-align:center;"><b>$\pi kasle$ Número 3<br>Enero-Febrero de 2012</b>
+  <p style="margin:0;text-align:center;"><b>$\pi kasle$ Número 3<br/>Enero-Febrero de 2012</b>
   </p><span><a style="float:left;" href="pikasle/PIkasle03.pdf">&ensp;PDF del número&ensp;</a>
   <a style="float:right;" href="pikasle/portada03.jpg">&ensp;Portada del número&ensp;</a></span>
   </div>
@@ -157,19 +157,19 @@
   <div class="row" style="padding-top:3em;">
   <div class="col-md-4" style="text-align:center;">
   <a href="pikasle/PIkasle04.pdf"><img style="width:90%;" src="pikasle/portada04red.jpg" alt="Cover of Issue N. 4 of PIkasle"/></a>
-  <p style="margin:0;text-align:center;"><b>$\pi kasle$ Número 4<br>Marzo-Abril de 2012</b>
+  <p style="margin:0;text-align:center;"><b>$\pi kasle$ Número 4<br/>Marzo-Abril de 2012</b>
   </p><span><a style="float:left;" href="pikasle/PIkasle04.pdf">&ensp;PDF del número&ensp;</a>
   <a style="float:right;" href="pikasle/portada04.jpg">&ensp;Portada del número&ensp;</a></span>
   </div>
   <div class="col-md-4" style="text-align:center;">
   <a href="pikasle/PIkasle05.pdf"><img style="width:90%;" src="pikasle/portada05red.jpg" alt="Cover of Issue N. 5 of PIkasle"/></a>
-  <p style="margin:0;text-align:center;"><b>$\pi kasle$ Número 5<br>Septiembre-Octubre de 2012</b>
+  <p style="margin:0;text-align:center;"><b>$\pi kasle$ Número 5<br/>Septiembre-Octubre de 2012</b>
   </p><span><a style="float:left;" href="pikasle/PIkasle05.pdf">&ensp;PDF del número&ensp;</a>
   <a style="float:right;" href="pikasle/portada05.jpg">&ensp;Portada del número&ensp;</a></span>
   </div>
   <div class="col-md-4" style="text-align:center;">
   <a href="pikasle/PIkasle06.pdf"><img style="width:90%;" src="pikasle/portada06red.jpg" alt="Cover of Issue N. 6 of PIkasle"/></a>
-  <p style="margin:0;text-align:center;"><b>$\pi kasle$ Número 6<br>November-Diciembre de 2012/Enero de 2013</b>
+  <p style="margin:0;text-align:center;"><b>$\pi kasle$ Número 6<br/>November-Diciembre de 2012/Enero de 2013</b>
   </p><span><a style="float:left;" href="pikasle/PIkasle06.pdf">&ensp;PDF del número&ensp;</a>
   <a style="float:right;" href="pikasle/portada06.jpg">&ensp;Portada del número&ensp;</a></span>
   </div>
@@ -179,19 +179,19 @@
   <div class="row" style="padding-top:3em;">
   <div class="col-md-4" style="text-align:center;">
   <a href="pikasle/PIkasle07.pdf"><img style="width:90%;" src="pikasle/portada07red.jpg" alt="Cover of Issue N. 7 of PIkasle"/></a>
-  <p style="margin:0;text-align:center;"><b>$\pi kasle$ Número 7<br>Febrero-Marzo-Abril-May de 2013</b>
+  <p style="margin:0;text-align:center;"><b>$\pi kasle$ Número 7<br/>Febrero-Marzo-Abril-May de 2013</b>
   </p><span><a style="float:left;" href="pikasle/PIkasle07.pdf">&ensp;PDF del número&ensp;</a>
   <a style="float:right;" href="pikasle/portada07.jpg">&ensp;Portada del número&ensp;</a></span>
   </div>
   <div class="col-md-4" style="text-align:center;">
   <a href="pikasle/PIkasle08.pdf"><img style="width:90%;" src="pikasle/portada08red.jpg" alt="Cover of Issue N. 8 of PIkasle"/></a>
-  <p style="margin:0;text-align:center;"><b>$\pi kasle$ Número 8<br>Septiembre-Octubre de 2012</b>
+  <p style="margin:0;text-align:center;"><b>$\pi kasle$ Número 8<br/>Septiembre-Octubre de 2012</b>
   </p><span><a style="float:left;" href="pikasle/PIkasle08.pdf">&ensp;PDF del número&ensp;</a>
   <a style="float:right;" href="pikasle/portada08.jpg">&ensp;Portada del número&ensp;</a></span>
   </div>
   <div class="col-md-4" style="text-align:center;">
   <a href="pikasle/PIkasle09.pdf"><img style="width:90%;" src="pikasle/portada09red.jpg" alt="Cover of Issue N. 9 of PIkasle"/></a>
-  <p style="margin:0;text-align:center;"><b>$\pi kasle$ Número 9<br>November-Diciembre de 2013/Enero de 2014</b>
+  <p style="margin:0;text-align:center;"><b>$\pi kasle$ Número 9<br/>November-Diciembre de 2013/Enero de 2014</b>
   </p><span><a style="float:left;" href="pikasle/PIkasle09.pdf">&ensp;PDF del número&ensp;</a>
   <a style="float:right;" href="pikasle/portada09.jpg">&ensp;Portada del número&ensp;</a></span>
   </div>
@@ -359,38 +359,38 @@
   <div class="row">
     <div class="col-md-6" style="padding-top:1em;">
        <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/369919190?color=ee2523&byline=0&portrait=0&title=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
-       <p style="text-align:center;"><b style="color:#ee2523;">What is the probabilistic analysis of a condition number?</b><br>Opening Conf. of the Thematic Einstein Semester, October 2019</p>
+       <p style="text-align:center;"><b style="color:#ee2523;">What is the probabilistic analysis of a condition number?</b><br/>Opening Conf. of the Thematic Einstein Semester, October 2019</p>
     </div>
    <div class="col-md-6" style="padding-top:1em;">
       <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/305120572?color=ee2523&byline=0&portrait=0&title=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
-      <p style="text-align:center;"><b style="color:#ee2523;">What is the best voting system?</b><br>&ldquo;What is...?&rdquo; Seminar, diciembre de 2018</p>
+      <p style="text-align:center;"><b style="color:#ee2523;">What is the best voting system?</b><br/>&ldquo;What is...?&rdquo; Seminar, diciembre de 2018</p>
    </div>
    <div class="col-md-6" style="padding-top:1em;">
      <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/281268225?color=ee2523&byline=0&portrait=0&title=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
-     <p style="text-align:center;"><b style="color:#ee2523;">What are semialgebraic sets in context?</b><br>&ldquo;What is...?&rdquo; Seminar, junio de 2018</p>
+     <p style="text-align:center;"><b style="color:#ee2523;">What are semialgebraic sets in context?</b><br/>&ldquo;What is...?&rdquo; Seminar, junio de 2018</p>
    </div>
    <div class="col-md-6" style="padding-top:1em;">
       <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/277075223?color=ee2523&byline=0&portrait=0&title=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
-      <p style="text-align:center;"><b style="color:#ee2523;">What are RP, co-RP, ZPP and all those random complexity clases?</b><br>&ldquo;What is...?&rdquo; Seminar, junio de 2017</p>
+      <p style="text-align:center;"><b style="color:#ee2523;">What are RP, co-RP, ZPP and all those random complexity clases?</b><br/>&ldquo;What is...?&rdquo; Seminar, junio de 2017</p>
    </div>
    <div class="col-md-6" style="padding-top:1em;">
      <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/272577693?color=ee2523&byline=0&portrait=0&title=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
-     <p style="text-align:center;"><b style="color:#ee2523;">The Niyogi-Smale-Weinberger Approximation Theorem</b><br>6th BMS Student Conference, febrero de 2018</p>
+     <p style="text-align:center;"><b style="color:#ee2523;">The Niyogi-Smale-Weinberger Approximation Theorem</b><br/>6th BMS Student Conference, febrero de 2018</p>
    </div>
    <div class="col-md-6" style="padding-top:1em;">
       <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/222339083?color=ee2523&byline=0&portrait=0&title=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
-      <p style="text-align:center;"><b style="color:#ee2523;">The shadow of the hidden combinatorics of completely positive operators on Polynomial Identity Testing</b><br>5th BMS Student Conference, febrero de 2017</p>
+      <p style="text-align:center;"><b style="color:#ee2523;">The shadow of the hidden combinatorics of completely positive operators on Polynomial Identity Testing</b><br/>5th BMS Student Conference, febrero de 2017</p>
    </div>
    <div class="col-md-6" style="padding-top:1em;">
      <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/203591928?color=ee2523&byline=0&portrait=0&title=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
-     <p style="text-align:center;"><b style="color:#ee2523;">What is the length of a potato?</b><br>&ldquo;What is...?&rdquo; Seminar, enero de 2017</p>
+     <p style="text-align:center;"><b style="color:#ee2523;">What is the length of a potato?</b><br/>&ldquo;What is...?&rdquo; Seminar, enero de 2017</p>
    </div>
    <div class="col-md-6" style="padding-top:1em;">
       <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/160594229?color=ee2523&byline=0&portrait=0&title=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
-      <p style="text-align:center;"><b style="color:#ee2523;">What is an origami constructible number?</b><br>&ldquo;What is...?&rdquo; Seminar, febrero de 2016</p>
+      <p style="text-align:center;"><b style="color:#ee2523;">What is an origami constructible number?</b><br/>&ldquo;What is...?&rdquo; Seminar, febrero de 2016</p>
    </div>
   </div>
-  <br>
+  <br/>
   <script src="https://player.vimeo.com/api/player.js"></script>
 </div>
 </div>
