--- a/research.html
+++ b/research.html
@@ -137,32 +137,32 @@
   <h2 class="display-4">Papers and preprints</h2>
   <p style="margin:0;">The following shows my papers and preprint in the last few years. For a complete list, see <a href="cv.html#publications">the list on my CV</a> or <a href="arXiv.html">my list of arXiv preprints</a>.</p>
 
-  <br><div class="row"><div class="col-md-12">
+  <br/><div class="row"><div class="col-md-12">
   <h3>Preprints <a class="btn btn-arxiv" href="arXiv.html" role="button"><i class="ai ai-arxiv-square"></i> arXiv preprints' list</a></h3>
   </div></div>
 
-  <br><div class="cv">
+  <br/><div class="cv">
   <div class="year"><h4>2019</h4></div><div class="paper"><h4>&emsp;Computing the Homology of Semialgebraic Sets. II: General Formulas<a class="btn btn-arxiv" href="https://arxiv.org/abs/1903.10710" role="button">arXiv:1903.10710</a></h4></div>
    <div class="pretalktitle"></div><div class="collaborator">(Together with <a href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algorithmische_algebra/v_menue/members/prof_dr_peter_buergisser/">Peter B&uuml;rgisser</a> and <a href="https://www6.cityu.edu.hk/ma/people/profile/cuckerf.htm">Felipe Cucker</a>)</div>
   </div>
 
-  <br><div class="row"><div class="col-md-12">
+  <br/><div class="row"><div class="col-md-12">
   <h3>Papers</h3>
   </div></div>
 
-  <br><div class="cv">
+  <br/><div class="cv">
   <div class="year"><h4>2019</h4></div><div class="paper"><h4>&emsp;On the Number of Real Zeros of Random Fewnomials
   <a class="btn btn-arxiv" href="https://arxiv.org/abs/1811.09425"  role="button">arXiv:1811.09425</a></h4></div>
    <div class="pretalktitle"></div><div class="collaborator"> P. B&uuml;rgisser, A.A. Erg&uuml;r and J. Tonelli-Cueto. On the Number of Real Zeros of Random Fewnomials, <i>SIAM Journal on Applied Algebra and Geometry</i>, 3(4):721–732, 2019. <span><a href="https://doi.org/10.1137/18M1228682">DOI 10.1137/18M1228682</a></span></div>
   </div>
 
-  <br><div class="cv">
+  <br/><div class="cv">
   <div class="year"></div><div class="paper"><h4>&emsp;Plantinga-Vegter algorithm takes average polynomial time<a class="btn btn-arxiv" href="https://arxiv.org/abs/1901.09234"  role="button">arXiv:1901.09234</a></h4></div>
    <div class="pretalktitle"></div><div class="collaborator">F. Cucker, A.A. Erg&uuml;r and J. Tonelli-Cueto. Plantinga-Vegter Algorithm takes Average Polynomial Time. In <i>Proceedings of the 2019 on International Symposium on Symbolic and Algebraic Computation</i>, <a href="#ISSAC2019">ISSAC'19</a>, pages 114-121. ACM, New York, 2019. <span><a href="https://doi.org/10.1145/3326229.3326252">DOI 10.1145/3326229.3326252</a></span></div>
   </div>
 
-  <br><div class="cv">
-  <div class="year"></div><div class="paper"><h4>&emsp;Computing the Homology of Semialgebraic Sets I: Lax Formulas<a class="btn btn-arxiv" href="https://arxiv.org/abs/1807.06435"  role="button">arXiv:1807.06435</a></h4></div>
+  <br/><div class="cv">
+  <div class="year"></div><div class="paper"><h4>&emsp;Computing the Homology of Semialgebraic Sets. I: Lax Formulas<a class="btn btn-arxiv" href="https://arxiv.org/abs/1807.06435"  role="button">arXiv:1807.06435</a></h4></div>
    <div class="pretalktitle"></div><div class="collaborator">P. Bürgisser, F. Cucker and J. Tonelli-Cueto. Computing the Homology of Semialgebraic Sets. I: Lax Formulas, <i>Foundations of Computational Mathematics</i>, 20(1):71-119, 2020. First on-line: May 2019. <span><a href="https://doi.org/10.1007/s10208-019-09418-y">DOI 10.1007/s10208-019-09418-y</a></span></div>
   </div>
 </div>
@@ -170,13 +170,13 @@
 <div id="other">
   <h2 class="display-4">Other publications</h2>
 
-  <br><div class="row"><div class="col-md-12">
+  <br/><div class="row"><div class="col-md-12">
   <h3>Theses</h3>
   </div></div>
 
-  <br><div class="cv">
+  <br/><div class="cv">
   <div class="year"><h4>2019</h4></div><div class="paper"><h4>&emsp;Condition  and  Homology  in  Semialgebraic  Geometry<a class="btn btn-phd" href="doctoralthesis.html" role="button">doctoral thesis</a></h4></div>
-   <div class="pretalktitle"></div><div class="collaborator">J. Tonelli-Cueto. <i>Condition  and  Homology  in  Semialgebraic  Geometry</i>. PhD thesis, Technsiche Universit&auml;t Berlin, DepositOnce Repository, December 2019. <span><a href="http://dx.doi.org/10.14279/depositonce-9453">DOI 10.14279/depositonce-9453</a></span></div>
+   <div class="pretalktitle"></div><div class="collaborator">J. Tonelli-Cueto. <i>Condition  and  Homology  in  Semialgebraic  Geometry</i>. Doctoral thesis, Technsiche Universit&auml;t Berlin, DepositOnce Repository, December 2019. <span><a href="http://dx.doi.org/10.14279/depositonce-9453">DOI 10.14279/depositonce-9453</a></span></div>
   </div>
 
  </div>
