--- a/research_es.html
+++ b/research_es.html
@@ -138,44 +138,44 @@
   <h2 class="display-4">Artículos científicos y preprints</h2>
   <p style="margin:0;">Los siguientes son mi artículos científicos y preprints en los últimos años. Para una lista completa, consultar <a href="cv.html#publications">la lista de mi CV</a> o <a href="arXiv.html">mi lista de preprints de arXiv</a>.</p>
 
-    <br><div class="row"><div class="col-md-12">
+    <br/><div class="row"><div class="col-md-12">
     <h3>Preprints <a class="btn btn-arxiv" href="arXiv.html" role="button"><i class="ai ai-arxiv-square"></i> arXiv preprints' list</a></h3>
     </div></div>
 
-    <br><div class="cv">
+    <br/><div class="cv">
     <div class="year"><h4>2019</h4></div><div class="paper"><h4>&emsp;Computing the Homology of Semialgebraic Sets. II: General Formulas<a class="btn btn-arxiv" href="https://arxiv.org/abs/1903.10710" role="button">arXiv:1903.10710</a></h4></div>
      <div class="pretalktitle"></div><div class="collaborator">(Together with <a href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algorithmische_algebra/v_menue/members/prof_dr_peter_buergisser/">Peter B&uuml;rgisser</a> and <a href="https://www6.cityu.edu.hk/ma/people/profile/cuckerf.htm">Felipe Cucker</a>)</div>
     </div>
 
-    <br><div class="row"><div class="col-md-12">
+    <br/><div class="row"><div class="col-md-12">
     <h3>Artículos científicos</h3>
     </div></div>
 
-    <br><div class="cv">
+    <br/><div class="cv">
     <div class="year"><h4>2019</h4></div><div class="paper"><h4>&emsp;On the Number of Real Zeros of Random Fewnomials
     <a class="btn btn-arxiv" href="https://arxiv.org/abs/1811.09425"  role="button">arXiv:1811.09425</a></h4></div>
      <div class="pretalktitle"></div><div class="collaborator"> P. B&uuml;rgisser, A.A. Erg&uuml;r and J. Tonelli-Cueto. On the Number of Real Zeros of Random Fewnomials (Inglés) [Sobre el número de ceros reales de oligonomios aleatorios], <i>SIAM Journal on Applied Algebra and Geometry</i>, 3(4):721–732, 2019. <span><a href="https://doi.org/10.1137/18M1228682">DOI 10.1137/18M1228682</a></span></div>
     </div>
 
-    <br><div class="cv">
+    <br/><div class="cv">
     <div class="year"></div><div class="paper"><h4>&emsp;Plantinga-Vegter algorithm takes average polynomial time<a class="btn btn-arxiv" href="https://arxiv.org/abs/1901.09234"  role="button">arXiv:1901.09234</a></h4></div>
      <div class="pretalktitle"></div><div class="collaborator">F. Cucker, A.A. Erg&uuml;r y J. Tonelli-Cueto. Plantinga-Vegter Algorithm takes Average Polynomial Time (Inglés) [El algoritmo de Plantinga-Vegter toma tiempo medio polinómico]. In <i>Proceedings of the 2019 on International Symposium on Symbolic and Algebraic Computation</i>, <a href="#ISSAC2019">ISSAC'19</a>, pages 114-121. ACM, New York, 2019. <span><a href="https://doi.org/10.1145/3326229.3326252">DOI 10.1145/3326229.3326252</a></span></div>
     </div>
 
-    <br><div class="cv">
-    <div class="year"></div><div class="paper"><h4>&emsp;Computing the Homology of Semialgebraic Sets I: Lax Formulas<a class="btn btn-arxiv" href="https://arxiv.org/abs/1807.06435"  role="button">arXiv:1807.06435</a></h4></div>
-     <div class="pretalktitle"></div><div class="collaborator">P. Bürgisser, F. Cucker and J. Tonelli-Cueto. Computing the Homology of Semialgebraic Sets. I: Lax Formulas (Inglés) [Computando la Homología de Conjuntos Semialgebraicos. I: Fórmulas Laxas], <i>Foundations of Computational Mathematics</i>, 20(1):71-119, 2020. First on-line: May 2019. <span><a href="https://doi.org/10.1007/s10208-019-09418-y">DOI 10.1007/s10208-019-09418-y</a></span></div>
+    <br/><div class="cv">
+    <div class="year"></div><div class="paper"><h4>&emsp;Computing the Homology of Semialgebraic Sets. I: Lax Formulas<a class="btn btn-arxiv" href="https://arxiv.org/abs/1807.06435"  role="button">arXiv:1807.06435</a></h4></div>
+     <div class="pretalktitle"></div><div class="collaborator">P. Bürgisser, F. Cucker and J. Tonelli-Cueto. Computing the Homology of Semialgebraic Sets. I: Lax Formulas (Inglés) [Computando la Homología de Conjuntos Semialgebraicos. I: Fórmulas Laxas], <i>Foundations of Computational Mathematics</i>, 20(1):71-119, 2020. Versión on-line: mayo del 2019. <span><a href="https://doi.org/10.1007/s10208-019-09418-y">DOI 10.1007/s10208-019-09418-y</a></span></div>
     </div>
 </div>
 <hr>
 <div id="other">
   <h2 class="display-4">Otras publicaciones</h2>
 
-  <br><div class="row"><div class="col-md-12">
+  <br/><div class="row"><div class="col-md-12">
   <h3>Tesis</h3>
   </div></div>
 
-  <br><div class="cv">
+  <br/><div class="cv">
   <div class="year"><h4>2019</h4></div><div class="paper"><h4>&emsp;Condition  and  Homology  in  Semialgebraic  Geometry<a class="btn btn-phd" href="doctoralthesis_es.html" role="button">tesis doctoral</a></h4></div>
    <div class="pretalktitle"></div><div class="collaborator">J. Tonelli-Cueto. <i>Condition  and  Homology  in  Semialgebraic  Geometry (Inglés) [Condición y Homología en Geometría Semialgebraica]</i>. Tesis doctoral, Technsiche Universit&auml;t Berlin, Repositorio DepositOnce, diciembre 2019. <span><a href="http://dx.doi.org/10.14279/depositonce-9453">DOI 10.14279/depositonce-9453</a></span></div>
   </div>
