--- a/non-research.html
+++ b/non-research.html
@@ -6,9 +6,8 @@
     <meta name="google" content="notranslate" />
     <meta http-equiv="Content-Language" content="en"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Josu&eacute; Tonelli-Cueto's Non-ResearchResearch</title>
+    <title>Josu&eacute; Tonelli-Cueto's Non-Research</title>
     <meta name="description" content="Teaching and other activities of Josué Tonelli-Cueto" />
-
     <!--  Bootstrap core CSS  -->
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
 
